--- a/index.html
+++ b/index.html
@@ -14,21 +14,58 @@
 
 <body>
     <section class="top-banner">
-        <div class="first-section">
+        <div class="side-by-syde">
             <div class="half-width">
                 <h1>WELCOME TO</h1>
                 <h1><span class="orange">MAMUN-LABONY'S</span> WORLD</h1>
-                <h3>Build Climber and Train Stopper</h3>
-                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
-                    work. That's why I am learning and mastering web development. I will not stop until I become the Web
-                    Development Hero.</p>
-                <a class="photos" href="https://photos.google.com/">OUR GALLARY</a>
+                <h3>A Smart Love Letter To My Girlfriend</h3>
+                <p>You know how much i love you and how much i miss you all the time. You know how much i cherish to
+                    feel you so close.You know how much i am dedicated to be with you aalwayzzz.. You know everything
+                    "My Moharani". Then why you don't act according to me huh??? I will kill(i mean kill dimu rki) you
+                    if you don't listen to me anytime...Huhhh!!!!!! Hehehehehehe...</p>
+                <a class="button" href="https://photos.google.com/">OUR GALLARY</a>
             </div>
             <div class="half-width">
                 <img class="image" src="images/my-bg.jpg" alt="">
             </div>
         </div>
     </section>
+    <section class="background-image">
+        <div class="side-by-syde">
+            <div>
+                <img class="image" src="images/my-bg2.jpg" alt="">
+            </div>
+            <div class="half-width">
+                <h1>DREAM BIG</h1>
+                <h2><span class="orange">TO MARRY EACH OTHER</span></h2>
+                <p>Ahhh... One day we will be married to each other. Then think once what happened on that night..
+                    Hehehe,our "swag night". In Sha Allah,our married life will begin with 2 raqat nofol salah that we
+                    will pray together on that night. In Sha Allah...... You will wait for me right?????????</p>
+                <a class="button" href="">OUR PLAN</a>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h1>FAMILY GOAL</h1>
+        <div class="side-by-syde">
+            <div id="left" class="half-width border">
+                <h2>A Big family</h2>
+                <h3 class="orange">Full of love | only 10 children..ok??</h3>
+                <p>R english hoit no parir...baicce loiyyum de besh gori,buijju na? towai to acho kn? r hono tension
+                    nai...bindasss life with my lovely babes,ummahhhhhhh</p>
+            </div>
+            <div id="right" class="half-width border">
+                <h2>Cute Mother | Cute baby Children</h2>
+                <h3 class="orange">2021-2022 | programming hero learner</h3>
+                <p>Amar bou jemon cute,baicce rao to cute hobe,eta ki bolte hoi. Bacca sob tumi samlaba kemon?? ami to
+                    busy manush busy thakbo. vaibo na...rat e thik time e hajir hoye jamu,okkheee???????? Hehehee.....
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>A Boyfriend Presentation</p>
+    </footer>
 </body>
 
 </html>
