--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     nai...bindasss life with my lovely babes,ummahhhhhhh</p>
             </div>
             <div id="right" class="half-width border">
-                <h2>Cute Mother | Cute baby Children</h2>
-                <h3 class="orange">2021-2022 | programming hero learner</h3>
+                <h2>A Cute Family</h2>
+                <h3 class="orange">Cute Mother | Cute baby Children</h3>
                 <p>Amar bou jemon cute,baicce rao to cute hobe,eta ki bolte hoi. Bacca sob tumi samlaba kemon?? ami to
                     busy manush busy thakbo. vaibo na...rat e thik time e hajir hoye jamu,okkheee???????? Hehehee.....
                 </p>
